--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,8 @@
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
+      <p appBasicHighlight>Style Me!</p>
+      <p appBetterHightlight>Style Me with a better directive !</p>
     </div>
   </div>
 </div>
