--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
         <p>Only odd</p>
       </ng-template>
       <p appBasicHighlight>Style Me!</p>
-      <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'">
+      <p [appBetterHighlight]="'red'" [defaultColor]="'yellow'">
         Style Me with a better directive !
       </p>
     </div>
