99. Binding to Directive Properties ex 3 - with default property binding []

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
         <p>Only odd</p>
       </ng-template>
       <p appBasicHighlight>Style Me!</p>
-      <p [appBetterHighlight]="'red'" [defaultColor]="'yellow'">
+      <p [appBetterHighlight]="'red'" defaultColor="yellow">
         Style Me with a better directive !
       </p>
     </div>
