--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
             {{ oddNumber }}
           </li>
         </div>
-        <div *ngIf="!onlyOdd">
+        <!-- <div *ngIf="!onlyOdd">
           <li
             class="list-group-item"
             *ngFor="let evenNumber of evenNumbers"
@@ -43,7 +43,20 @@
               {{ evenNumber }}
             </li>
           </div>
-        </ng-template>
+        </ng-template> -->
+
+        <div *appUnless="onlyOdd">
+          <li
+            class="list-group-item"
+            *ngFor="let evenNumber of evenNumbers"
+            [ngClass]="{ even: evenNumber % 2 === 0 }"
+            [ngStyle]="{
+              backgroundColor: evenNumber % 2 === 0 ? 'green' : 'transparent'
+            }"
+          >
+            {{ evenNumber }}
+          </li>
+        </div>
       </ul>
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
