--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,6 +65,13 @@
       <p [appBetterHighlight]="'red'" defaultColor="yellow">
         Style Me with a better directive !
       </p>
+
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="20">Value is 20</p>
+        <p *ngSwitchDefault>Value is default</p>
+      </div>
     </div>
   </div>
 </div>
